styles.css
/* header styling
want the header to have a small banner. Maybe a solid color, a little transparent.
wasn't in mockup but can make it look a little nicer*/
html {
  background: url('LegoBricks.jpg') no-repeat center fixed;     
    background-size: cover;
}

body {
margin: 0 auto;
  font-family: 'Exo', sans-serif;
  text-align: center;
  color: whitesmoke;
}

/*#backGround {
  background-image: url(LegoBricks.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100vw;
  height: 100vh;
}*/

header, footer{
background: rgba( 156, 245, 216, 0.35 );
box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
backdrop-filter: blur( 15px );
-webkit-backdrop-filter: blur( 15px );
border-radius: 10px;
border: 1px solid rgba( 255, 255, 255, 0.18 );
height: 100px;
text-align: center;
padding-top: 3px;
margin: 20px 0px 20px 0px;
overflow: hidden;
}


.display-moc {
  margin-top:30px;
}
.display-moc img {
  max-width: 500px;
  height: auto;
  border-radius: 20px;
  margin-top: 25px;
  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
object-fit: contain;
}

.mocDisplay {
  height: 80vh;
  background: rgba( 195, 251, 233, 0.25 );
  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
  backdrop-filter: blur( 4px );
  -webkit-backdrop-filter: blur( 4px );
  border-radius: 10px;
  border: 1px solid rgba( 255, 255, 255, 0.18 );
margin-top: 20px;
overflow: hidden;
}

.display-moc{
  display: flex;
flex-flow: column wrap;
justify-content: space-evenly;
align-items: center;
align-content: center;
}

.icons {
  width: 50px;
  height: 50px;
}

ul li {
  display: inline;
  padding: 5px;
}
/*footer {
  bottom: 0;
  width: 100vw;
  position: absolute;
}

/* style button
Should try to get it to look like a lego, maybe a little wiggle on it as an effect*/

/* style mocDisplay - this should style the whole section of the input, button and display
you may need to move things around in HTML to make that possible*/


/* style footer - make sure you add gitHub and linkdin links and a trade mark (ex ref single col HW*/

